# Spaceship_Titanic

./: .dockerignore  .gitattributes  .gitignore  Dataset.dvc  Makefile  Notebooks.dvc  README.md  data.dvc  docker-compose.yaml  full_set.txt  model_artifacts.dvc  pyproject.toml  setup.cfg
.Trash-197609/files/: Spaceship_Titanic_Train.html  Untitled.ipynb
.Trash-197609/info/: Spaceship_Titanic_Train 1.html.trashinfo  Spaceship_Titanic_Train.html.trashinfo  Untitled 1.ipynb.trashinfo  Untitled.ipynb.trashinfo  Untitled1.ipynb.trashinfo
.dvc/: config
.envs/: .mlflow-common  .mlflow-dev  .mlflow-prod
.ssh/: id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub
Notebooks/: EDA.ipynb  Encoding.ipynb  HPT.ipynb  Imputation.ipynb  Outlier.ipynb  Post-mortem.ipynb  cryo_report.html
Notebooks/Model_artifacts/: confusion_matrix_CatBoost_ME.html  confusion_matrix_CatBoost_Mixed.html  confusion_matrix_CatBoost_NE.html
Notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Notebooks/catboost_info/learn/: events.out.tfevents
SpaceshipTitanic/: Notebooks.dvc
SpaceshipTitanic/Notebooks/: EDA.ipynb
SpaceshipTitanic/config_schemas/: config_schema.py
SpaceshipTitanic/data/: version_data.py
SpaceshipTitanic/utils/: config_utils.py  data_utils.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: raw.dvc
docker/: Dockerfile
docker/scripts/: startup-script.sh
mlruns/0/: meta.yaml
outputs/2024-04-14/23-03-26/.hydra/: hydra.yaml
outputs/2024-04-14/23-13-58/.hydra/: hydra.yaml
outputs/2024-04-14/23-14-52/.hydra/: hydra.yaml
outputs/2024-04-14/23-16-24/.hydra/: hydra.yaml
outputs/2024-04-14/23-18-32/.hydra/: hydra.yaml
outputs/2024-04-14/23-22-17/.hydra/: hydra.yaml
outputs/2024-04-14/23-25-37/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-14/23-27-28/.hydra/: hydra.yaml
outputs/2024-04-14/23-33-33/.hydra/: hydra.yaml
outputs/2024-04-14/23-35-13/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/11-45-02/.hydra/: hydra.yaml
outputs/2024-04-15/11-45-51/.hydra/: hydra.yaml
outputs/2024-04-15/11-47-42/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/11-49-10/.hydra/: hydra.yaml
outputs/2024-04-15/11-49-51/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/11-51-01/.hydra/: hydra.yaml
outputs/2024-04-15/11-52-20/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/11-54-57/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/12-02-23/.hydra/: hydra.yaml
outputs/2024-04-15/12-05-56/.hydra/: hydra.yaml
outputs/2024-04-15/12-06-18/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/12-11-51/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/12-13-32/.hydra/: hydra.yaml
outputs/2024-04-15/12-14-44/.hydra/: hydra.yaml
outputs/2024-04-15/12-16-46/.hydra/: hydra.yaml
outputs/2024-04-15/12-18-57/.hydra/: hydra.yaml
outputs/2024-04-15/12-25-14/.hydra/: hydra.yaml
outputs/2024-04-15/12-26-45/.hydra/: hydra.yaml
outputs/2024-04-15/12-28-20/.hydra/: hydra.yaml
outputs/2024-04-15/12-29-31/.hydra/: hydra.yaml
outputs/2024-04-15/12-30-02/.hydra/: hydra.yaml
outputs/2024-04-15/12-30-31/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/12-31-27/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/12-51-01/.hydra/: hydra.yaml
outputs/2024-04-15/12-55-50/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/12-57-56/.hydra/: hydra.yaml
outputs/2024-04-15/13-00-22/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/13-02-58/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/13-04-37/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-15/13-24-15/.hydra/: hydra.yaml
outputs/2024-04-15/13-37-32/.hydra/: hydra.yaml
outputs/2024-04-22/17-56-18/.hydra/: hydra.yaml
outputs/2024-04-22/17-58-15/.hydra/: hydra.yaml
outputs/2024-04-22/18-20-59/.hydra/: hydra.yaml
outputs/2024-04-22/18-35-01/.hydra/: hydra.yaml
outputs/2024-04-22/19-12-10/.hydra/: hydra.yaml
src/: main.py
src/config_schemas/: config_schema.py
src/config_schemas/data/: data_processing_config_schema.py
src/config_schemas/data_schemas/: process_data_schema.py
src/config_schemas/features/: encoding_config_schema.py  feature_engineering_config_schema.py  feature_selection_config_schema.py  imputation_config_schema.py  outlier_config_schema.py
src/config_schemas/infrastructure/: gcp_config_schema.py
src/config_schemas/models/: HPT_config_schema.py
src/configs/: config.yaml
src/configs/data/: data_processing_config.yaml
src/configs/data_configs/: process_data_config.yaml
src/configs/features/: encoding_config.yaml  feature_engineering_config.yaml  feature_selection_config.yaml  imputation_config.yaml  outlier_config.yaml
src/configs/infrastructure/: GCP_config.yaml
src/configs/models/: HPT_CatBoost_config.yaml  HPT_ExtraTrees_config.yaml  HPT_HistGradientBoost_config.yaml  HPT_LGBM_config.yaml  HPT_XGBoost_config.yaml  HPT_baseline_config.yaml  HPT_config.yaml
src/data/: data_processing.py  get_raw_data.py  version_data.py
src/features/: data_processing.py  feature_engineering.py  feature_selection.py  outlier_detection.py
src/features/encoding/: encoding.py  encoding_model.py
src/features/imputation/: CatBoost_imputer.py  imputation.py
src/models/: HPT.py
src/utils/: HPT_utils.py  MLflow_utils.py  config_utils.py  data_utils.py  encoding_utils.py  feature_selection_utils.py  gcp_utils.py  imputation_utils.py  utils.py
(+305 files in other folders)
