[tool.poetry]
name = "Spaceship_Titanic"
version = "0.1.0"
description = ""
authors = ["Yueren Xing <garrusxing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
hydra-core = "~=1.3.2"
pydantic = "~=2.6.4"
numpy = "~=1.26.4"
pandas = "~=2.2.1"
tensorflow = "~=2.16.0"
scikit-learn = "~=1.4.1"
matplotlib = "~=3.8.4"
seaborn = ">=0.10.1,<0.13"
plotly = "~=5.20.0"
xgboost = "2.0.3"
catboost = "~=1.2.3"
lightgbm = "~=4.3.0"
scipy = ">=1.4.1,<1.12"
scikit-learn-extra = "~=0.3.0"
optuna = "~=3.6.1"
ydata-profiling = "~=4.7.0"
autoviz = "~=0.1"
missingno = "~=0.5.2"
distfit = "~=1.7.3"
eli5 = "~=0.13.0"
dvc = {version = "~=3.49.0", extras=["gdrive", "gs"]}
mlflow = "~=2.11.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "~=4.1.5"
pytest = "~=8.1.1"
black = "~=24.3.0"
isort = "~=5.13.2"
flake8 = "~=7.0.0"
mypy = "~=1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
indent = 4
lines_between_types = 1
known_first_party = ["SpaceshipTitanic"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
ignore_missing_imports = true
install_types = true
non_interactive = true
follow_imports = "silent"
no_strict_optional = true

warn_redundant_casts = false
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_no_return = true
warn_incomplete_stub = true

disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true

verbosity = 0
